--- a/index.html
+++ b/index.html
@@ -1,158 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sankhla Racing Academy | Off-Road Training</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-    body {
-        margin: 0;
-        font-family: Arial, Helvetica, sans-serif;
-        color: #ffffff;
-        background-color: #000;
-    }
+    <title>Sankhla Racing Academy | Professional Car Racing Training | racing.org.in</title>
 
-    /* MAIN BACKGROUND SECTION */
-    .hero {
-        background-image:
-            linear-gradient(
-                rgba(0, 0, 0, 0.65),
-                rgba(0, 0, 0, 0.80)
-            ),
-            url("background.jpg"); /* <-- YOUR IMAGE */
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        padding: 60px 20px;
-        min-height: 100vh;
-    }
+    <!-- SEO -->
+    <meta name="description" content="Sankhla Racing Academy offers professional off-road and car racing training in Jaipur. Beginner to advanced level courses on a specialized track.">
+    <meta name="keywords" content="Car Racing Training, Off Road Training, Rally Training, Racing Academy Jaipur, Sankhla Racing Academy">
+    <meta name="author" content="Sankhla Racing Academy">
 
-    .container {
-        max-width: 1100px;
-        margin: auto;
-    }
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            color: #fff;
+            background: url("background.jpg") no-repeat center center fixed;
+            background-size: cover;
+        }
 
-    h1 {
-        text-align: center;
-        font-size: 42px;
-        margin-bottom: 30px;
-    }
+        /* Dark overlay */
+        .overlay {
+            background: rgba(0, 0, 0, 0.65);
+            min-height: 100vh;
+            padding: 30px 20px;
+        }
 
-    h2 {
-        font-size: 28px;
-        margin-top: 40px;
-        margin-bottom: 15px;
-        color: #ffd700;
-    }
-
-    h3 {
-        margin-top: 25px;
-        color: #ffffff;
-    }
-
-    p, li {
-        font-size: 16px;
-        line-height: 1.6;
-    }
-
-    ul {
-        padding-left: 20px;
-    }
-
-    /* IMAGE STRIP */
-    .image-strip {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-        gap: 10px;
-        margin: 20px 0 40px;
-    }
-
-    .image-strip img {
-        width: 100%;
-        height: 100px;
-        object-fit: cover;
-        border-radius: 4px;
-        border: 1px solid #555;
-    }
-
-    /* FOOTER */
-    footer {
-        background: rgba(0, 0, 0, 0.85);
-        padding: 20px;
-        text-align: center;
-        border-top: 1px solid #444;
-        font-size: 14px;
-    }
-
-    footer span {
-        color: #ffd700;
-    }
-
-    @media (max-width: 768px) {
         h1 {
-            font-size: 32px;
+            text-align: center;
+            font-size: 42px;
+            margin-bottom: 5px;
         }
+
         h2 {
-            font-size: 24px;
+            text-align: center;
+            color: #ffd700;
+            margin-top: 10px;
         }
-    }
-</style>
+
+        p.subtitle {
+            text-align: center;
+            font-size: 20px;
+            color: #ddd;
+            margin-bottom: 40px;
+        }
+
+        .content {
+            max-width: 900px;
+            margin: auto;
+        }
+
+        ul {
+            margin-left: 20px;
+        }
+
+        li {
+            margin-bottom: 10px;
+            font-size: 17px;
+        }
+
+        .section {
+            margin-bottom: 40px;
+        }
+
+        .images-row {
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-bottom: 30px;
+        }
+
+        .images-row img {
+            width: 150px;
+            height: 100px;
+            object-fit: cover;
+            border-radius: 5px;
+            border: 2px solid #fff;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            margin-top: 40px;
+            font-size: 14px;
+            border-top: 1px solid #555;
+        }
+
+        footer a {
+            color: #ffd700;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 30px;
+            }
+            .images-row img {
+                width: 120px;
+                height: 90px;
+            }
+        }
+    </style>
 </head>
 
 <body>
+<div class="overlay">
 
-<section class="hero">
-    <div class="container">
+    <h1>Sankhla Racing Academy</h1>
+    <p class="subtitle">
+        Professional Car Racing & Off-Road Training<br>
 
-        <h1>Sankhla Racing Academy</h1>
+    </p>
 
-        <!-- IMAGE GALLERY -->
-        <div class="image-strip">
-            <img src="img1.jpg">
-            <img src="img2.jpg">
-            <img src="img3.jpg">
-            <img src="img4.jpg">
-            <img src="img5.jpg">
-            <img src="img6.jpg">
+    <!-- Image Strip 
+    <div class="images-row">
+        <img src="img1.jpg" alt="Racing Training">
+        <img src="img2.jpg" alt="Off Road Track">
+        <img src="img3.jpg" alt="Rally Driving">
+        <img src="img4.jpg" alt="Obstacle Track">
+        <img src="img5.jpg" alt="4x4 Training">
+    </div>
+    -->
+    <div class="content">
+
+        <div class="section">
+            <h2>Key Features & Highlights</h2>
         </div>
 
-        <h2>Key Features & Highlights</h2>
+        <div class="section">
+            <h3>Professional Training</h3>
+            <ul>
+                <li>Car racing and off-road training by experienced professionals.</li>
+                <li>Courses available from Beginner to Advanced levels.</li>
+            </ul>
+        </div>
 
-        <h3>Professional Training</h3>
-        <ul>
-            <li>Car race professional training by certified experts</li>
-            <li>Beginner to Advanced level courses</li>
-        </ul>
+        <div class="section">
+            <h3>The Track</h3>
+            <ul>
+                <li>Specialized off-road training track for cars.</li>
+                <li>Multiple obstacles and technical challenges.</li>
+                <li>Designed for maximum safety and driving fun.</li>
+            </ul>
+        </div>
 
-        <h3>The Track</h3>
-        <ul>
-            <li>Specialized off-road car training track</li>
-            <li>Multiple obstacles and technical challenges</li>
-            <li>Designed for safety and real-world racing experience</li>
-        </ul>
+        <div class="section">
+            <h3>The Experience</h3>
+            <ul>
+                <li>Test your skills and speed on a real off-road track.</li>
+                <li>Experience the thrill of professional racing techniques.</li>
+                <li>Perfect adventure for car enthusiasts and racers.</li>
+            </ul>
+        </div>
 
-        <h3>The Experience</h3>
-        <ul>
-            <li>Test your skills and speed on an off-road track</li>
-            <li>Experience the real thrill of off-roading</li>
-            <li>Ideal for racing enthusiasts and professionals</li>
-        </ul>
-
-        <h3>Eligibility & Compatibility</h3>
-        <ul>
-            <li>Open for both Men and Women</li>
-            <li>Suitable for SUVs and Sedan cars</li>
-        </ul>
+        <div class="section">
+            <h3>Eligibility & Compatibility</h3>
+            <ul>
+                <li><strong>Who Can Join:</strong> Open for both Men and Women.</li>
+                <li><strong>Vehicle Types:</strong> Suitable for SUVs and Sedan cars.</li>
+            </ul>
+        </div>
 
     </div>
-</section>
 
-<footer>
-    Sankhla Racing Academy, Jaipur |
-    Email: <span>sanjivsankhla@gmail.com</span> |
-    Mobile: <span>7737563567</span>
-</footer>
+    <footer>
+        © 2026 <strong>Sankhla Racing Academy</strong>, Jaipur <br>
+        🌐 <strong>www.racing.org.in</strong> |
+        ✉️ <a href="mailto:sanjivsankhla@gmail.com">sanjivsankhla@gmail.com</a> |
+        📞 <a href="tel:+917737563567">+91 77375 63567</a>
+    </footer>
 
+</div>
 </body>
 </html>
