--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Sankhla Racing Academy | Professional Car Racing Training | racing.org.in</title>
+git add .
+git commit -m "Test auto deploy"
+git push
 
     <!-- SEO -->
     <meta name="description" content="Sankhla Racing Academy offers professional off-road and car racing training in Jaipur. Beginner to advanced level courses on a specialized track.">
